apply plugin: 'java'
apply plugin: 'eclipse'
apply plugin: 'idea'

compileJava {
    options.fork = true
    options.forkOptions.jvmArgs << '--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED'
}

// In this section you declare where to find the dependencies of your project
repositories {
    mavenCentral()
}

sourceCompatibility = 1.9
targetCompatibility = 1.9

dependencies {
    // Use JUnit test framework
    testImplementation 'junit:junit:4.12'
}

